# err_trail

./: Cargo.toml  README.md
.github/workflows/: ci.yml
err_trail/: Cargo.toml
err_trail/src/: lib.rs
err_trail/tests/: mod.rs
test_no_std/: Cargo.toml  main.rs
