[package]
name = "err_trail"
description = "Add context to errors through logging"
categories = ["rust-patterns", "no-std"]
version = "0.10.2"
edition = "2024"
license = "Apache-2.0"
documentation = "https://docs.rs/err_trail"
repository = "https://github.com/mcmah309/err_trail"

[dependencies]
tracing = { version = "0.1", default-features = false, optional = true }
log = { version = "0.4", default-features = false, optional = true }
defmt = { version = "1", default-features = false, optional = true }

[dev-dependencies]
tracing = { version = "0.1" }
tracing-test = { version = "0.2", features = ["no-env-filter"] }
lazy_static = "1"
flaky_test = "0.2"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
